# vscode-dl

./: .dockerignore  .gitignore  .travis.yml  404.md  Dockerfile  README.md  data.json  demo.html  demo.md  dl-vscode.py  example.html  extensions.yaml  get.py  go.yaml  index.html  requirements.txt  screenshot.md  serv.sh  setup.cfg  setup.py  update-extensions.py  update.py  update.sh  vscode-dl.py
container/: Dockerfile.alpine  Dockerfile.buster  install-ext.sh  run.sh
demo/: data.json  extensions.md  index.html  screenshot.md
docs/: README.md  code.json  extensions.md  index.html
src/vscode_dl/: __init__.py  extensions.yaml  get.py  vscode_dl.py
test/: docker-compose.yml  runtest.sh  test.yaml
test/client/: Dockerfile  tests.sh
tests/: docker-compose.yml  runtest.sh  test.yaml
tests/client/: Dockerfile  client.sh
tests/mirror/: default.conf
