[flake8]
max-line-length = 128

[metadata]
author = Rene Devichi
author_email = rene.github@gmail.com
classifiers =
    License :: Public Domain
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Installation/Setup
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
description = Visual Studio Code and extensions downloader for offline installations
long_description = file:README.md
long_description_content_type = text/markdown
license = Public domain
license_file = LICENSE
name = vscode-dl
project_urls =
    Source Code = https://github.com/rene-d/vscode-dl
    Bug Reports = https://github.com/rene-d/vscode-dl/issues
url = https://rene-d.github.io/vscode-dl/
version = 1.0.0
requires-dist = setuptools
keywords =
    vscode
    visualstudiocode

[options]
include_package_data = True
install_requires =
    requests
    python-dateutil
    PyYAML
    requests_cache
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    vscode-dl = vscode_dl.vscode_dl:main

[options.package_data]
* =
    extensions.yaml
    get.py
    index.html
